--- a/app/src/main/res/layout/activity_tourism_places.xml
+++ b/app/src/main/res/layout/activity_tourism_places.xml
@@ -44,6 +44,19 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_marginTop="105dp">
+            <Button
+                android:id="@+id/All"
+                android:layout_width="75dp"
+                android:layout_height="40dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
+                android:background="@drawable/categoriesborder"
+                android:scaleType="fitCenter"
+                android:layout_marginLeft="10dp"
+                android:adjustViewBounds="true"
+                android:text="All"
+                android:textSize="20dp"
+                android:textStyle="bold"/>
             <ImageButton
                 android:id="@+id/TouristAttraction"
                 android:layout_width="75dp"
