--- a/app/src/main/res/layout/members_recycleritem.xml
+++ b/app/src/main/res/layout/members_recycleritem.xml
@@ -1,20 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
+    android:layout_marginTop="20dp"
     android:layout_height="match_parent">
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/MembersProfileImage"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        app:civ_border_color="@color/dark_blue"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/MembersName"
-
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
       />
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/Remove"
+        android:background="@drawable/baseline_person_remove_24"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="250dp"
         android:text="Remove"
