--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -50,10 +50,12 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/placeRecyclerView"
+        android:layout_below="@+id/cityRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="120dp"
+        android:layout_marginBottom="75dp"
         android:visibility="gone"
         />
 
