--- a/app/src/main/res/layout/activity_edit_memory.xml
+++ b/app/src/main/res/layout/activity_edit_memory.xml
@@ -7,6 +7,14 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     tools:context=".EditActivities.EditMemoryActivity">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -80,8 +88,9 @@
             android:id="@+id/EditsaveMemoryButton"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_marginTop="300dp"
+            android:layout_marginTop="20dp"
             android:text="Save"
             app:cornerRadius="20dp" />
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.core.widget.NestedScrollView>
