--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -106,7 +106,8 @@
             android:id="@+id/data_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp">
+            android:layout_marginTop="10dp"
+            android:paddingBottom="30dp">
 
             <TextView
                 android:id="@+id/Addplace"
@@ -209,10 +210,11 @@
                 android:layout_height="wrap_content"
                 android:text="Save"
                 android:id="@+id/Save"
-                android:visibility="gone"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
+                android:layout_marginBottom="10dp"
                 android:layout_margin="16dp"
+
                 />
 
             <Button
