--- a/app/src/main/res/layout/activity_upload_place.xml
+++ b/app/src/main/res/layout/activity_upload_place.xml
@@ -9,7 +9,7 @@
     tools:context=".UploadActivities.UploadPlaceActivity">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
@@ -17,7 +17,7 @@
         app:cardElevation="20dp">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_gravity="center_horizontal"
             android:padding="20dp"
@@ -79,7 +79,8 @@
                 android:id="@+id/savePlaceButton"
                 android:layout_marginTop="20dp"
                 app:cornerRadius="20dp"
-                android:backgroundTint="@color/dark_blue"/>
+                android:backgroundTint="@color/dark_blue"
+                />
 
 
 
