--- a/app/src/main/res/layout/memory_video_item.xml
+++ b/app/src/main/res/layout/memory_video_item.xml
@@ -12,8 +12,8 @@
         android:layout_marginRight="10dp" />
 
     <ImageView
-        android:layout_width="176dp"
-        android:layout_height="190dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/thumbnailView"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
