--- a/app/src/main/res/layout/tourism_place_item.xml
+++ b/app/src/main/res/layout/tourism_place_item.xml
@@ -38,7 +38,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/edit"
+            android:src="@drawable/baseline_edit_24"
             android:background="@null"
             android:id="@+id/EditPlace"
             android:layout_marginTop="10dp"
@@ -47,7 +47,7 @@
         <ImageButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/delete"
+            android:src="@drawable/baseline_delete_24"
             android:background="@null"
             android:id="@+id/DeletePlace"
             android:layout_below="@+id/placeTitle"
