--- a/app/src/main/res/layout/triprecycleritem.xml
+++ b/app/src/main/res/layout/triprecycleritem.xml
@@ -9,7 +9,7 @@
         android:layout_height="300dp"
         android:id="@+id/TripCard"
         android:layout_marginLeft="70dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="40dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="8dp">
 
@@ -51,7 +51,7 @@
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/delete"
+                    android:src="@drawable/baseline_delete_24"
                     android:id="@+id/DeleteTrip"
                     android:background="@null"
                     android:layout_margin="10dp" />
