--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -4,12 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp">
-
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".Activities.HomePage">
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/rauche_rock">
 
         <LinearLayout
             android:orientation="vertical"
@@ -91,28 +87,12 @@
 
                     </LinearLayout>
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/EditPost"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/baseline_edit_22" />
-
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/DeletePost"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_marginTop="10dp"
-                        android:src="@drawable/baseline_close_24" />
-
 
                 </LinearLayout>
 
 
             </LinearLayout>
 
-            <!-- Replace ImageView with ViewPager2 for post images -->
             <androidx.viewpager2.widget.ViewPager2
                 android:id="@+id/PostImagePager"
                 android:layout_width="match_parent"
@@ -152,79 +132,77 @@
 
                 </RelativeLayout>
 
-                <RelativeLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <ImageButton
-                        android:id="@+id/LikeButton"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:background="@drawable/baseline_favorite_border_24"
-                        android:onClick="likePost"
-                        />
-                    <ImageButton
-                        android:id="@+id/DislikeButton"
-                        android:layout_width="35dp"
-                        android:layout_height="35dp"
-                        android:background="@drawable/baseline_favorite_24"
-                        android:onClick="dislikePost"
-                        android:visibility="gone"
 
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/Likes"
-                        android:text="0 likes"
-                        android:layout_marginTop="30dp"
-                        android:textColor="@color/dark_blue"/>
-
-                </RelativeLayout>
             </LinearLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/CommentsRecyclerView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+ See all Comments"
-                android:id="@+id/AllComments"
-                />
 
+<RelativeLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="15dp"
+        >
 
+        <EditText
+            android:id="@+id/CommentText"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:hint="Write a comment"
+            />
+        <ImageButton
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="5dp"
+            android:id="@+id/Send"
+            android:backgroundTint="@color/dark_blue"
+            android:src="@drawable/baseline_insert_comment_24"
+            android:background="@drawable/back_border"
+
+            /></LinearLayout>
+</RelativeLayout>
             <LinearLayout
                 android:id="@+id/Details"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
-
-                <LinearLayout
+                <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginTop="10dp">
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="7dp"
+                    android:layout_marginStart="7dp"
+                    android:layout_marginBottom="100dp"
+                    app:cardCornerRadius="30dp"
+                    app:cardElevation="20dp"
+                    android:background="@drawable/back_border">
 
-                    <EditText
-                        android:id="@+id/CommentText"
-                        android:layout_width="0dp"
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/CommentsRecyclerView"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:hint="Write a comment" />
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    </androidx.cardview.widget.CardView>>
 
-                    <Button
-                        android:id="@+id/Send"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Send"
-                        android:backgroundTint="@color/dark_blue"
-                        />
-                </LinearLayout>
+
+
+                    </LinearLayout>
+
             </LinearLayout>
-        </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
 
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/transparent"
+        app:itemIconTint="#5A93C5"
+        app:itemBackground="@drawable/icon_border"
+        app:itemIconSize="35dp"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/bottom_nav_menu" />
 </RelativeLayout>
