--- a/app/src/main/res/layout/activity_upload_post.xml
+++ b/app/src/main/res/layout/activity_upload_post.xml
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".UploadActivities.UploadActivity"
     android:background="@drawable/rauche_rock">
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,6 +15,7 @@
         android:layout_marginStart="20dp"
         app:cardCornerRadius="30dp"
         app:cardElevation="20dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -23,6 +23,7 @@
             android:layout_gravity="center_horizontal"
             android:padding="20dp"
             android:background="@drawable/back_border">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -30,13 +31,29 @@
                 android:textSize="30sp"
                 android:textAlignment="center"
                 android:textColor="@color/dark_blue"/>
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:src="@drawable/upload"
-                android:id="@+id/UploadPostImage"
-                android:layout_marginTop="10dp"
-                android:scaleType="fitXY"/>
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/ImagesRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"/>
+
+                <ImageButton
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/AddImage"
+                    android:backgroundTint="@color/dark_blue"
+                    android:src="@drawable/baseline_add_photo_alternate_24"
+                    android:background="@drawable/back_border"
+                    android:layout_alignParentBottom="true"/>
+
+            </RelativeLayout>
+
+
+
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
@@ -46,8 +63,7 @@
                 android:padding="16dp"
                 android:hint="Enter place name"
                 android:gravity="start|center_vertical"
-                android:textColor="@color/black"
-                />
+                android:textColor="@color/black"/>
 
             <EditText
                 android:layout_width="match_parent"
@@ -58,9 +74,7 @@
                 android:padding="16dp"
                 android:hint="Enter Description"
                 android:gravity="start|center_vertical"
-                android:textColor="@color/black"
-                />
-
+                android:textColor="@color/black"/>
 
             <Button
                 android:layout_width="match_parent"
@@ -68,9 +82,10 @@
                 android:text="Add Journal"
                 android:id="@+id/SaveButton"
                 android:layout_marginTop="20dp"
-                app:cornerRadius = "20dp"
+                app:cornerRadius="20dp"
                 android:backgroundTint="@color/dark_blue"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </ScrollView>
+
