--- a/app/src/main/res/layout/activity_city.xml
+++ b/app/src/main/res/layout/activity_city.xml
@@ -11,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/dark_blue">
+        android:background="@color/dark_blue"
+        android:id="@+id/Title">
 
         <TextView
             android:layout_width="wrap_content"
@@ -19,7 +20,7 @@
             android:text="Cities"
             android:textSize="23sp"
             android:textStyle="bold"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="5dp"
             android:textColor="@color/white"
             />
