--- a/app/src/main/res/layout/activity_favorites.xml
+++ b/app/src/main/res/layout/activity_favorites.xml
@@ -1,10 +1,27 @@
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Activities.FavoritePage"
     android:background="@drawable/rauche_rock">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/dark_blue"
+        android:id="@+id/Title">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Favorites"
+            android:textSize="23sp"
+            android:textStyle="bold"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/white"
+            />
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
@@ -14,77 +31,16 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="75dp"/>
 
-    <LinearLayout
-        android:id="@+id/buttonsLayout"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
-
-        <!-- Home Button -->
-        <ImageButton
-            android:id="@+id/home_button2"
-            android:layout_width="82dp"
-            android:layout_height="60dp"
-            android:background="@drawable/back_border"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/baseline_home_24"
-            android:adjustViewBounds="true"
-            android:layout_marginBottom="7dp" />
-
-        <!-- Search Button -->
-        <ImageButton
-            android:id="@+id/TripsButton"
-            android:layout_width="82dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="0.5dp"
-            android:background="@drawable/back_border"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/baseline_directions_car_24"
-            android:layout_marginBottom="7dp"/>
-
-        <!-- Favorite Button -->
-        <ImageButton
-            android:id="@+id/citiesButton"
-            android:layout_width="82dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="0.5dp"
-            android:background="@drawable/back_border"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/baseline_location_city_24"
-            android:layout_marginBottom="7dp"/>
-
-        <!-- Download Button -->
-        <ImageButton
-            android:id="@+id/favoritesButton"
-            android:layout_width="82dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="0.5dp"
-            android:background="@drawable/back_border"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/baseline_favorite_24"
-            android:layout_marginBottom="7dp"/>
-
-        <!-- Profile Button -->
-        <ImageButton
-            android:id="@+id/profile_button"
-            android:layout_width="82dp"
-            android:layout_height="60dp"
-            android:layout_marginLeft="0.5dp"
-            android:background="@drawable/back_border"
-            android:paddingTop="7dp"
-            android:paddingBottom="7dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/baseline_person_24"
-            android:layout_marginBottom="7dp"/>
-    </LinearLayout>
+        android:layout_alignParentBottom="true"
+        android:background="@android:color/transparent"
+        app:itemIconTint="#5A93C5"
+        app:itemBackground="@drawable/icon_border"
+        app:itemIconSize="35dp"
+        app:labelVisibilityMode="labeled"
+        app:menu="@menu/bottom_nav_menu" />
 
 </RelativeLayout>
