--- a/app/src/main/res/layout/activity_forget_password_page.xml
+++ b/app/src/main/res/layout/activity_forget_password_page.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@drawable/rauche_rock"
     tools:context=".Activities.ForgetPasswordPage">
     <TextView
         android:layout_width="wrap_content"
