Edit Profile Image Added

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,14 +12,28 @@
         android:orientation="horizontal"
         android:background="@color/dark_blue"
         >
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/ProfileProfileImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:civ_border_width="2dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            app:civ_border_color="@color/white"/>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/ProfileProfileImage"
+                android:layout_width="60dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                app:civ_border_color="@color/white"
+                app:civ_border_width="2dp" />
+            <ImageButton
+                android:layout_width="20dp"
+                android:layout_height="20dp"
+                android:id="@+id/EditProfile"
+                android:layout_marginLeft="48dp"
+                android:layout_alignParentBottom="true"
+                android:backgroundTint="@color/dark_blue"
+                android:src="@drawable/baseline_edit"
+
+                ></ImageButton>
+        </RelativeLayout>
 
 
         <RelativeLayout
