changes in trip class and details

--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -210,6 +210,7 @@
                 android:layout_height="wrap_content"
                 android:text="Save"
                 android:id="@+id/Save"
+                android:visibility="gone"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginBottom="10dp"
