--- a/app/src/main/res/layout/activity_trip_details.xml
+++ b/app/src/main/res/layout/activity_trip_details.xml
@@ -156,13 +156,15 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_below="@id/Addplace"
                 android:layout_marginTop="10dp"
                 android:visibility="gone"
                 android:id="@+id/MembersRecyclerView"
                 android:clipToPadding="false"
-                android:paddingBottom="56dp" />
+                android:scrollbars="vertical"
+
+                />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
