--- a/app/src/main/res/layout/members_recycleritem.xml
+++ b/app/src/main/res/layout/members_recycleritem.xml
@@ -1,30 +1,32 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_marginTop="20dp"
-    android:layout_height="match_parent">
+    android:paddingVertical="8dp"
+    android:paddingHorizontal="16dp">
+
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/MembersProfileImage"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        app:civ_border_color="@color/dark_blue"/>
+        app:civ_border_color="@color/dark_blue" />
+
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/MembersName"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
-      />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="10dp" />
+
     <ImageButton
+        android:id="@+id/Remove"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/Remove"
         android:background="@drawable/baseline_person_remove_24"
-        android:layout_marginTop="10dp"
-        android:layout_marginLeft="250dp"
-        android:text="Remove"
-        />
+        android:layout_gravity="center_vertical"
+        android:contentDescription="Remove" />
 
 </LinearLayout>
