--- a/app/src/main/res/layout/triprecycleritem.xml
+++ b/app/src/main/res/layout/triprecycleritem.xml
@@ -25,12 +25,16 @@
                 android:layout_gravity="center" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
                 android:id="@+id/TripName"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
                 android:text="Name"
+                android:textAlignment="center"
+                android:background="@drawable/back_border"
+                android:backgroundTint="@color/dark_blue"
+                android:textColor="@color/black"
                 android:textSize="20sp" />
 
             <LinearLayout
